--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,6 +66,12 @@ android {
 }
 
 dependencies {
+    def room_version = "2.3.0"
+
+    // Room
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
+
     implementation 'androidx.appcompat:appcompat:1.3.0-beta01'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
 
