--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,7 +79,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0'
 
     //Intro Library
-    implementation 'com.github.paolorotolo:appintro:v5.1.0'
+    implementation 'com.github.AppIntro:AppIntro:6.3.1'
 
     //Pdf Viewer Library (Proguard config done)
     implementation 'com.github.ozanlimited:AndroidPdfViewer:1.0.1'
