--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,7 +82,7 @@ dependencies {
     implementation 'com.github.AppIntro:AppIntro:6.3.1'
 
     //Pdf Viewer Library (Proguard config done)
-    implementation 'com.github.ozanlimited:AndroidPdfViewer:1.0.1'
+    implementation 'com.github.TalbotGooday:AndroidPdfViewer:3.1.0-beta.3'
 
     //License Presenter Library (Proguard config not needed)
     implementation 'com.github.franmontiel:AttributionPresenter:1.0.1'
