--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,7 +79,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0'
 
     //Intro Library
-    implementation 'com.github.AppIntro:AppIntro:6.3.1'
+    implementation 'com.github.paolorotolo:appintro:v5.1.0'
 
     //Pdf Viewer Library (Proguard config done)
     implementation 'com.github.TalbotGooday:AndroidPdfViewer:3.1.0-beta.3'
