--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,7 +82,7 @@ dependencies {
     implementation 'com.github.paolorotolo:appintro:v5.1.0'
 
     //Pdf Viewer Library (Proguard config done)
-    implementation 'com.github.LightSun:AndroidPdfViewer:10.1.4
+    implementation 'com.github.LightSun:AndroidPdfViewer:10.1.4'
 
     //License Presenter Library (Proguard config not needed)
     implementation 'com.github.franmontiel:AttributionPresenter:1.0.1'
